# webgpu_project

./: CMakeLists.txt  README.md
runtime/engine/shader/opengl/: ui.fs  ui.vs
runtime/engine/shader/webgpu/: shader.wgsl  ui.wgsl
src/: svo_renderer.h
src/core/: callbacks.h  cmdarg.cpp  cmdarg.h  event.cpp  event.h  input.cpp  input.h  memblocks.cpp  memblocks.h  memmgr.h  message_queue.cpp  message_queue.h  object.cpp  object.h  object_types.h  property.cpp  property.h  sound_mgr.cpp  sound_mgr.h  system.cpp  system.h
src/core/file/: asset_read.cpp  asset_read.h  file_async.cpp  file_async.h  file_manager.cpp  file_manager.h  mem_file.cpp  mem_file.h
src/game/: drago.cpp  drago.h  render_pane.cpp  render_pane.h
src/render/: camera.cpp  camera.h  command_nodes.h  context.cpp  context.h  context_ogl.cpp  context_ogl.h  context_wgpu.cpp  context_wgpu.h  draw_command_buffer.cpp  draw_command_buffer.h  draw_command_buffer_manager.cpp  draw_command_buffer_manager.h  dynamic_draw_command_buffer.cpp  dynamic_draw_command_buffer.h  material.cpp  material.h  material_manager.h  material_manager_ogl.cpp  material_manager_ogl.h  material_manager_wgpu.cpp  material_manager_wgpu.h  material_ogl.cpp  material_wgpu.cpp  model.h  render_cache.cpp  render_cache.h  render_target.h  render_target_ogl.cpp  render_target_ogl.h  render_target_wgpu.cpp  render_target_wgpu.h  texture.cpp  texture.h  vertexbuff.h  vertexbuff_ogl.cpp  vertexbuff_wgpu.cpp  verts.cpp  verts.h
src/render/gui/: font.cpp  font.h  gui.cpp  gui.h  gui_draw.cpp  gui_draw.h  gui_manager.cpp  gui_manager.h  gui_properties.cpp  gui_properties.h  style.cpp  style.h
src/system/: core_platform.cpp  debug.cpp  debug.h  engine.cpp  engine.h  engine_messages.h  extern_inc.h  file.h  file_win.cpp  global.h  global_emscript.h  global_gen.h  global_linux.h  global_win.h  mutex.h  sound_win.cpp
src/util/: color.cpp  color.h  drg_gc.cpp  drg_gc.h  filename.cpp  filename.h  json.cpp  json.h  math_def.cpp  math_def.h  priority_queue.cpp  priority_queue.h  profile.cpp  profile.h  rand.h  settings.cpp  settings.h  stringn.cpp  stringn.h  stringv.cpp  stringv.h
src/util/dib/: dib.cpp  dib.h  dib_rw.cpp
src/util/dib/dxt/: dxt.cpp  dxt.h
src/util/dib/jpg/: H2v2.cpp  idct.cpp  jidctfst.cpp  jpegdecoder.cpp  jpegdecoder.h
src/util/dib/png/: lodepng.cpp  lodepng.h
